--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,6 +67,8 @@ jobs:
             ./components/**/demo
             ./components/**/node_modules
             ./node_modules
+            ./.turbo
+            ./components/**/.turbo
           key: build-${{ github.sha }}-22
       - name: Release
         env:
