chore: update label-required-approvals action version and make check-commits workflow stand alone

--- a/.github/workflows/check-commits.yml
+++ b/.github/workflows/check-commits.yml
@@ -1,10 +1,8 @@
-name: RC Check Commits
+name: Check Commits
 
 on:
   pull_request:
-    branches:
-      - 'rc/**'
-      - 'main'
+    types: [opened, reopened, unlabeled, synchronize]
 permissions:
   contents: read
   deployments: write
