chore: add request-reviewers configuration and refactor required-approvals workflow

--- a/.github/workflows/required-approvers.yml
+++ b/.github/workflows/required-approvers.yml
@@ -13,23 +13,9 @@ jobs:
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           configuration-path: .github/team-approvers.yml
-  add-reviewers:
-    if: contains(github.event.pull_request.labels.*.name, 'semantic-status: breaking')
-    runs-on: ubuntu-latest            
-    steps:
-      - name: Add Pull Request Reviewer
-        uses: ej2015/add-remove-pr-reviewer@v1
-        with:
-          reviewers: "auro-release-managers"
-          token: ${{ secrets.GITHUB_TOKEN }}
-          action: add
-  remove-reviewers:
-    if: !contains(github.event.pull_request.labels.*.name, 'semantic-status: breaking')
+  manage-reviewers:
     runs-on: ubuntu-latest
     steps:
-      - name: Remove Pull Request Reviewer
-        uses: ej2015/add-remove-pr-reviewer@v1
-        with:
-          reviewers: "auro-release-managers"
-          token: ${{ secrets.GITHUB_TOKEN }}
-          action: remove
+    - name: Request Reviewers
+      uses: neo-diego-beltran/request-reviewers@v0.0.9
+
