chore: update cache keys in workflows to use run_id for better cache management

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,7 +67,9 @@ jobs:
             ./components/**/demo
             ./components/**/node_modules
             ./node_modules
-          key: build-${{ github.sha }}-22
+          key: build-22-${{ github.run_id }}
+          restore-keys: |
+            build-22-
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
