--- a/.github/actions/check-commits/action.yml
+++ b/.github/actions/check-commits/action.yml
@@ -29,7 +29,9 @@ runs:
           ./components/**/demo
           ./components/**/node_modules
           ./node_modules
-        key: build-${{ github.sha }}-${{ inputs.node-version }}
+        key: build-${{ inputs.node-version }}-${{ github.run_id }}
+        restore-keys: |
+          build-${{ inputs.node-version }}-
     - name: Ensure Git is installed
       run: |
         which git || (apt-get update && apt-get install -y git)
