--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -70,7 +70,9 @@ jobs:
               ./components/**/demo
               ./components/**/node_modules
               ./node_modules
-            key: build-${{ github.sha }}-22
+            key: build-22-${{ github.run_id }}
+            restore-keys: |
+              build-22-
         - name: Generate PR release version
           run: npx --package=@aurodesignsystem/auro-cli -- auro pr-release -p ${{ github.event.pull_request.number }}
         - name: Publish to NPM
@@ -119,7 +121,9 @@ jobs:
             ./node_modules
             
             
-          key: build-${{ github.sha }}-22
+          key: build-22-${{ github.run_id }}
+          restore-keys: |
+            build-22-
       - name: Deploy ${{ matrix.component }} demo
         uses: "./.github/actions/surge"
         with:
