chore: update pull request workflow to ignore specific branches

--- a/.github/workflows/check-pr.yml
+++ b/.github/workflows/check-pr.yml
@@ -1,13 +1,15 @@
 name: Check PR
+
 on:
   pull_request_review:
   pull_request:
     types: [opened, reopened, labeled, unlabeled]
+    branches-ignore:
+      - 'rc/**'
+      - 'main' 
+
 jobs:
   require-reviewers:
-    # Optional: skip check if no relevant label is present
-    # This needs to be kept in sync with the labels being checked
-    if: ${{ contains(github.event.pull_request.labels.*.name, 'semantic-status') }}
     runs-on: ubuntu-latest
     steps:
       - name: Require Reviewers
