--- a/.github/workflows/check-pr.yml
+++ b/.github/workflows/check-pr.yml
@@ -12,6 +12,8 @@ jobs:
   require-reviewers:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
       - name: Require Reviewers
         uses: travelperk/label-requires-reviews-action@2.0.3
         with:
