--- a/.github/workflows/check-pr.yml
+++ b/.github/workflows/check-pr.yml
@@ -3,7 +3,7 @@ name: Check PR
 on:
   pull_request_review:
   pull_request:
-    types: [opened, reopened, labeled, unlabeled]
+    types: [opened, reopened, synchronize, labeled, unlabeled]
     branches-ignore:
       - 'rc/**'
       - 'main' 
@@ -16,6 +16,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Require Reviewers
         uses: travelperk/label-requires-reviews-action@2.0.3
+        env:
+          token: ${{ secrets.GITHUB_TOKEN }}
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           rules_yaml: | # define which PR labels require how many approving reviewers
