--- a/.github/workflows/check-pr.yml
+++ b/.github/workflows/check-pr.yml
@@ -3,10 +3,7 @@ name: Check PR
 on:
   pull_request_review:
   pull_request:
-    types: [opened, reopened, synchronize, labeled, unlabeled]
-    branches-ignore:
-      - 'rc/**'
-      - 'main' 
+    types: [labeled, unlabeled]
 
 jobs:
   require-reviewers:
