--- a/components/dropdown/package.json
+++ b/components/dropdown/package.json
@@ -47,7 +47,7 @@
     "serve:closed": "web-dev-server",
     "postCss:component": "node ../../node_modules/@aurodesignsystem/auro-library/scripts/build/postCss.mjs",
     "sass:render": "sass-render --load-path=../../node_modules 'src/**/*.css' -t ../../node_modules/@aurodesignsystem/auro-library/scripts/build/staticStyles-template.js",
-    "test": "wtr --config \"../../packages/config/src/web-test-runner.config.mjs\" --coverage --port 7705",
+    "test": "wtr --config \"web-test-runner.config.mjs\" --coverage --port 7705",
     "test:watch": "wtr --config \"../../packages/config/src/web-test-runner.config.mjs\" --watch --port 7705",
     "types": "tsc --project tsconfig.json",
     "lint": "npm-run-all scssLint esLint",
