chore: add custom Stylelint rule for Sass variable interpolation in var() fallbacks

--- a/packages/config/src/stylelintrc.config.json
+++ b/packages/config/src/stylelintrc.config.json
@@ -1,9 +1,11 @@
 {
   "extends": ["stylelint-config-recommended", "stylelint-config-idiomatic-order", "stylelint-config-standard-scss"],
   "plugins": [
-    "stylelint-scss"
+    "stylelint-scss",
+    "./custom-stylelint-rules/stylelint-sass-var-interpolation.mjs"
   ],
   "rules": {
+    "custom/sass-var-interpolation-in-var-fallback": true,
     "alpha-value-notation": "number",
     "at-rule-empty-line-before": [ "always", {
       "except": [
