--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "dev": "turbo run dev --parallel",
     "dev:closed": "turbo run dev:closed --parallel",
     "lint": "turbo run lint",
-    "test": "echo 'SKIPPING TESTS, RESTORE TESTS BEFORE RELEASE' && exit 0",
+    "test": "turbo run test",
     "test:watch": "turbo run test:watch",
     "clean": "turbo run clean && rm -rf node_modules",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
