--- a/.github/workflows/sync-tags.yml
+++ b/.github/workflows/sync-tags.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.GH_TOKEN }}
+          token: ${{ secrets.ACCESS_TOKEN }}
 
       - name: Push Tag to Dev Branch
         run: |
@@ -28,4 +28,4 @@ jobs:
           git merge --ff-only $TAG || { echo "Failed to merge tag into dev"; exit 1; }
           git push origin dev || { echo "Failed to push changes to dev"; exit 1; }
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
