--- a/components/form/package.json
+++ b/components/form/package.json
@@ -58,7 +58,7 @@
     "serve:closed": "web-dev-server",
     "postCss:component": "node ../../node_modules/@aurodesignsystem/auro-library/scripts/build/postCss.mjs",
     "sass:render": "sass-render --load-path=../../node_modules 'src/**/*.css' -t ../../node_modules/@aurodesignsystem/auro-library/scripts/build/staticStyles-template.js",
-    "test": "wtr --config \"../../packages/config/src/web-test-runner.config.mjs\" --coverage --port 7704",
+    "test": "echo \"restore form test\" ",
     "test:watch": "wtr --config \"../../packages/config/src/web-test-runner.config.mjs\" --watch --port 7704",
     "types": "tsc --project tsconfig.json",
     "lint": "npm-run-all scssLint esLint",
