--- a/components/datepicker/package.json
+++ b/components/datepicker/package.json
@@ -67,7 +67,7 @@
     "serve:closed": "web-dev-server",
     "postCss:component": "node ../../node_modules/@aurodesignsystem/auro-library/scripts/build/postCss.mjs",
     "sass:render": "sass-render --load-path=../../node_modules 'src/**/*.css' -t ../../node_modules/@aurodesignsystem/auro-library/scripts/build/staticStyles-template.js",
-    "test": "echo \"restore datepicker test\" ",
+    "test": "echo \"restore datepicker tests\" && exit 0",
     "test:watch": "wtr --config \"../../packages/config/src/web-test-runner.config.mjs\"  --watch --port 7706",
     "types": "tsc --project tsconfig.json",
     "lint": "echo \"restore linter rules\"",
