--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "sweep": "find ./components ./packages -type d -name 'dist' -exec rm -rf {} + && find ./ -type d -name '.turbo' -exec rm -rf {} + && find ./components ./packages -not -path '*/node_modules/*' -type f \\( -name '*.css' -o -name '*-css.js' \\) -delete",
     "preCommit": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/pre-commit.mjs",
     "prepare": "husky",
-    "deploy-demo": "npm run build && sh ./deploy-components.sh"
+    "deploy-demo": "npm run build && sh ./deploy-components.sh",
+    "local-demo": "npm run build && sh ./local-demo.sh"
   },
   "dependencies": {
     "@aurodesignsystem/auro-library": "^5.2.2",
