--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
   "devDependencies": {
     "@aurodesignsystem/design-tokens": "^8.2.1",
     "@aurodesignsystem/eslint-config": "^1.3.4",
-    "@aurodesignsystem/webcorestylesheets": "^8.1.1",
+    "@aurodesignsystem/webcorestylesheets": "npm:@aurodesignsystem-dev/webcorestylesheets@0.0.0-pr243.4",
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@open-wc/testing": "^4.0.0",
