test: move sveltekit directory to apps for testing real apps

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "workspaces": [
     "components/*",
-    "packages/*"
+    "packages/*",
+    "apps/*"
   ],
   "files": [
     "packages/build-tools/src/postinstall.mjs",
