feat: init floater
Co-authored-by: Stephen Rios <Stephen.Rios@AlaskaAir.com>
Co-authored-by: rmenner <ryan.menner@alaskaair.com>

--- a/components/floater/package.json
+++ b/components/floater/package.json
@@ -1,23 +1,13 @@
 {
-  "name": "@aurodesignsystem/auro-dropdown",
-  "version": "3.0.0",
-  "description": "auro-dropdown HTML custom element",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/AlaskaAirlines/auro-dropdown"
-  },
+  "name": "@poc/auro-floater",
+  "version": "0.0.0",
+  "description": "auro-floater HTML custom element",
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "Apache-2.0",
   "dependencies": {
-    "@aurodesignsystem/auro-helptext": "*",
-    "@poc/auro-floater": "*",
-    "@aurodesignsystem/auro-icon": "^8.0.2",
-    "@floating-ui/dom": "^1.6.13",
-    "@popperjs/core": "^2.11.8",
-    "chalk": "^5.4.1",
     "lit": "^3.2.1"
   },
   "devDependencies": {
@@ -25,11 +15,25 @@
     "@auro-formkit/config": "*",
     "@auro-formkit/typescript": "*",
     "@rollup/plugin-node-resolve": "^16.0.1",
-    "postcss-selector-replace": "^1.0.2",
+    "chalk": "^5.4.1",
     "rollup": "^4.39.0",
     "rollup-plugin-serve": "^3.0.0",
     "wc-sass-render": "^1.4.0",
     "web-component-analyzer": "^2.0.0"
+  },
+  "overrides": {
+    "wc-sass-render": {
+      "sass": "$sass"
+    }
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "*-css.js",
+      "*.css"
+    ]
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "scripts": {
     "build": "run-s sass bundler types build:docs",
@@ -38,7 +42,7 @@
     "build:sass": "sass --no-source-map --load-path=../../node_modules \"./src/styles/:./src/styles/\"",
     "build:watch": "nodemon -e scss,js --watch src --ignore \"*.css\" --ignore \"*-css.js\" --exec \"npm run build\"",
     "bundler": "rollup -c node:@auro-formkit/config/rollup",
-    "build:docs": "wca analyze 'scripts/wca/*.js' --outFiles docs/api.md; node ../../packages/build-tools/src/docProcessor.mjs --component dropdown",
+    "build:docs": "wca analyze 'scripts/wca/*.js' --outFiles docs/api.md; node ../../packages/build-tools/src/docProcessor.mjs --component floater",
     "clean": "rm -rf dist build",
     "dev": "concurrently \"npm run build:watch\" \"npm run serve\"",
     "dev:closed": "concurrently \"npm run build:watch\" \"npm run serve:closed\"",
@@ -46,8 +50,8 @@
     "serve:closed": "web-dev-server",
     "postCss:component": "node ../../node_modules/@aurodesignsystem/auro-library/scripts/build/postCss.mjs",
     "sass:render": "sass-render --load-path=../../node_modules 'src/**/*.css' -t ../../node_modules/@aurodesignsystem/auro-library/scripts/build/staticStyles-template.js",
-    "test": "wtr --config \"web-test-runner.config.mjs\" --coverage --port 7705",
-    "test:watch": "wtr --config \"../../packages/config/src/web-test-runner.config.mjs\" --watch --port 7705",
+    "test": "wtr --config \"../../packages/config/src/web-test-runner.config.mjs\" --coverage --port 7711",
+    "test:watch": "wtr --config \"../../packages/config/src/web-test-runner.config.mjs\" --watch --port 7711",
     "types": "tsc --project tsconfig.json",
     "lint": "npm-run-all scssLint esLint",
     "scssLint": "stylelint \"./src/**/*.scss\"",
