--- a/components/dropdown/package.json
+++ b/components/dropdown/package.json
@@ -13,7 +13,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@aurodesignsystem/auro-helptext": "*",
-    "@poc/auro-floater": "*",
+    "@poc/auro-layover": "*",
     "@aurodesignsystem/auro-icon": "^8.0.2",
     "@floating-ui/dom": "^1.6.13",
     "@popperjs/core": "^2.11.8",
