--- a/components/datepicker/package.json
+++ b/components/datepicker/package.json
@@ -18,7 +18,7 @@
     "@aurodesignsystem/auro-dropdown": "*",
     "@aurodesignsystem/auro-icon": "^8.1.2",
     "@aurodesignsystem/auro-input": "*",
-    "@aurodesignsystem/auro-popover": "^5.1.0",
+    "@aurodesignsystem/auro-popover": "npm:@aurodesignsystem-dev/auro-popover@0.0.0-pr102.1",
     "@material/mwc-icon-button": "^0.27.0",
     "@material/mwc-list": "^0.27.0",
     "@material/mwc-menu": "^0.27.0",
