--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dev": "turbo run dev --parallel",
     "dev:closed": "turbo run dev:closed --parallel",
     "lint": "turbo run lint",
+    "lint:fix": "turbo run lint:fix",
     "test": "turbo run test",
     "test:watch": "turbo run test:watch",
     "clean": "turbo run clean && rm -rf node_modules",
@@ -52,26 +53,49 @@
   },
   "dependencies": {
     "@lit/reactive-element": "^2.1.1",
+    "lit-html": "^3.2.1",
     "lit": "^3.3.1"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "*"
   },
   "devDependencies": {
+    "@auro-formkit/build-tools": "*",
+    "@auro-formkit/config": "*",
+    "@auro-formkit/form-validation": "*",
+    "@auro-formkit/typescript": "*",
+    "@auro-formkit/utils": "*",
+    "@aurodesignsystem/auro-bibtemplate": "*",
+    "@aurodesignsystem/auro-datepicker": "*",
+    "@aurodesignsystem/auro-dropdown": "*",
+    "@aurodesignsystem/auro-helptext": "*",
+    "@aurodesignsystem/auro-input": "*",
+    "@aurodesignsystem/auro-layout-element": "*",
+    "@aurodesignsystem/auro-menu": "*",
+    "@aurodesignsystem/auro-button": "^11.3.2",
+    "@aurodesignsystem/auro-header": "^4.0.2",
+    "@aurodesignsystem/auro-icon": "^8.1.2",
+    "@aurodesignsystem/auro-library": "^5.3.2",
+    "@aurodesignsystem/auro-popover": "^5.1.0",
     "@aurodesignsystem/design-tokens": "^8.4.0",
     "@aurodesignsystem/eslint-config": "^1.3.5",
-    "@aurodesignsystem/auro-library": "^5.3.2",
     "@aurodesignsystem/webcorestylesheets": "^10.0.3",
+    "@alaskaairux/icons": "^5.6.0",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
+    "@material/mwc-icon-button": "^0.27.0",
+    "@material/mwc-list": "^0.27.0",
+    "@material/mwc-menu": "^0.27.0",
     "@open-wc/testing": "^4.0.0",
+    "@rollup/plugin-commonjs": "^28.0.3",
+    "@rollup/plugin-node-resolve": "^16.0.1",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/npm": "^12.0.2",
     "@types/chai": "^5.2.2",
     "@types/mocha": "^10.0.10",
-    "@web/dev-server": "^0.4.6",
     "@web/dev-server-hmr": "^0.4.1",
+    "@web/dev-server": "^0.4.6",
     "@web/test-runner": "^0.20.2",
     "autoprefixer": "^10.4.21",
     "babel-loader": "^10.0.0",
@@ -80,27 +104,36 @@
     "concurrently": "^9.2.0",
     "copyfiles": "^2.4.1",
     "core-js": "^3.44.0",
-    "eslint": "^9.31.0",
+    "date-fns": "^4.1.0",
     "eslint-plugin-jsdoc": "^51.4.1",
+    "eslint": "^9.31.0",
+    "focus-visible": "^5.2.1",
     "husky": "^9.1.7",
+    "imask": "^7.6.1",
+    "lit": "^3.3.1",
     "lodash": "^4.17.21",
     "markdown-magic": "^3.7.0",
     "nodemon": "^3.1.10",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.5.6",
     "postcss-custom-properties": "^14.0.6",
     "postcss-discard-comments": "^7.0.4",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "rollup-plugin-serve": "^3.0.0",
+    "rollup": "^4.39.0",
     "sass": "^1.89.2",
     "semantic-release": "^24.2.7",
-    "stylelint": "^16.22.0",
     "stylelint-config-idiomatic-order": "^10.0.0",
-    "stylelint-config-standard": "^38.0.0",
     "stylelint-config-standard-scss": "^15.0.1",
+    "stylelint-config-standard": "^38.0.0",
     "stylelint-order": "^7.0.0",
     "stylelint-scss": "^6.12.1",
+    "stylelint": "^16.22.0",
     "turbo": "^2.5.5",
     "typescript": "^5.8.3",
+    "wc-range-datepicker": "^1.3.0",
+    "wc-sass-render": "^1.4.0",
+    "web-component-analyzer": "^2.0.0",
     "whatwg-fetch": "^3.6.20",
     "yaml-lint": "^1.7.0"
   },
