--- a/components/counter/package.json
+++ b/components/counter/package.json
@@ -11,27 +11,6 @@
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "Apache-2.0",
-  "dependencies": {
-    "@alaskaairux/icons": "^5.6.0",
-    "@aurodesignsystem/auro-bibtemplate": "*",
-    "@aurodesignsystem/auro-button": "^11.3.0",
-    "@aurodesignsystem/auro-dropdown": "*",
-    "@aurodesignsystem/auro-icon": "^8.1.2",
-    "chalk": "^5.4.1",
-    "lit": "^3.2.1"
-  },
-  "devDependencies": {
-    "@auro-formkit/build-tools": "*",
-    "@auro-formkit/config": "*",
-    "@auro-formkit/typescript": "*",
-    "@auro-formkit/utils": "*",
-    "@rollup/plugin-node-resolve": "^16.0.1",
-    "postcss-selector-replace": "^1.0.2",
-    "rollup": "^4.39.0",
-    "rollup-plugin-serve": "^3.0.0",
-    "wc-sass-render": "^1.4.0",
-    "web-component-analyzer": "^2.0.0"
-  },
   "scripts": {
     "build": "run-s sass bundler types build:docs",
     "build:version": "node ./scripts/version.mjs",
@@ -51,7 +30,10 @@
     "test:watch": "wtr --config \"../../packages/config/src/web-test-runner.config.mjs\"  --watch",
     "types": "tsc --project tsconfig.json",
     "lint": "npm-run-all scssLint esLint",
-    "scssLint": "stylelint \"./src/**/*.scss\" --fix",
-    "esLint": "eslint \"./src/**/*.js\""
+    "lint:fix": "npm-run-all scssLint:fix esLint:fix",
+    "scssLint": "stylelint \"./src/**/*.scss\"",
+    "esLint": "eslint \"./src/**/*.js\"",
+    "scssLint:fix": "stylelint \"./src/**/*.scss\" --fix",
+    "esLint:fix": "eslint \"./src/**/*.js\" --fix"
   }
 }
