--- a/components/datepicker/package.json
+++ b/components/datepicker/package.json
@@ -11,35 +11,6 @@
     "type": "git",
     "url": "https://github.com/AlaskaAirlines/auro-datepicker"
   },
-  "dependencies": {
-    "@alaskaairux/icons": "^5.5.0",
-    "@auro-formkit/form-validation": "*",
-    "@aurodesignsystem/auro-bibtemplate": "*",
-    "@aurodesignsystem/auro-button": "^11.3.0",
-    "@aurodesignsystem/auro-dropdown": "*",
-    "@aurodesignsystem/auro-icon": "^8.1.2",
-    "@aurodesignsystem/auro-input": "*",
-    "@aurodesignsystem/auro-popover": "^5.1.0",
-    "@material/mwc-icon-button": "^0.27.0",
-    "@material/mwc-list": "^0.27.0",
-    "@material/mwc-menu": "^0.27.0",
-    "chalk": "^5.4.1",
-    "date-fns": "^4.1.0",
-    "lit": "^3.3.0",
-    "wc-range-datepicker": "^1.3.0"
-  },
-  "devDependencies": {
-    "@auro-formkit/build-tools": "*",
-    "@auro-formkit/config": "*",
-    "@auro-formkit/typescript": "*",
-    "@rollup/plugin-node-resolve": "^16.0.1",
-    "compression": "^1.8.0",
-    "copyfiles": "^2.4.1",
-    "rollup": "^4.40.1",
-    "rollup-plugin-serve": "^3.0.0",
-    "wc-sass-render": "^1.4.0",
-    "web-component-analyzer": "^2.0.0"
-  },
   "overrides": {
     "wc-sass-render": {
       "sass": "$sass"
@@ -73,7 +44,10 @@
     "test:watch": "wtr --config \"../../packages/config/src/web-test-runner.config.mjs\"  --watch --port 7706",
     "types": "tsc --project tsconfig.json",
     "lint": "echo \"restore linter rules\"",
+    "lint:fix": "npm-run-all scssLint:fix esLint:fix",
     "scssLint": "stylelint \"./src/**/*.scss\"",
-    "esLint": "eslint \"./src/**/*.js\""
+    "esLint": "eslint \"./src/**/*.js\"",
+    "scssLint:fix": "stylelint \"./src/**/*.scss\" --fix",
+    "esLint:fix": "eslint \"./src/**/*.js\" --fix"
   }
 }
