--- a/components/datepicker/package.json
+++ b/components/datepicker/package.json
@@ -43,7 +43,7 @@
     "test": "wtr --config \"../../packages/config/src/web-test-runner.config.mjs\" --coverage --port 7706",
     "test:watch": "wtr --config \"../../packages/config/src/web-test-runner.config.mjs\"  --watch --port 7706",
     "types": "tsc --project tsconfig.json",
-    "lint": "echo \"restore linter rules\"",
+    "lint": "npm-run-all scssLint esLint",
     "lint:fix": "npm-run-all scssLint:fix esLint:fix",
     "scssLint": "stylelint \"./src/**/*.scss\"",
     "esLint": "eslint \"./src/**/*.js\"",
