--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "@web/test-runner": "^0.20.2",
     "autoprefixer": "^10.4.21",
     "babel-loader": "^10.0.0",
+    "backstopjs": "^6.3.25",
     "compression": "^1.8.1",
     "concat": "^1.0.3",
     "concurrently": "^9.2.0",
@@ -123,6 +124,7 @@
     "rollup": "^4.39.0",
     "sass": "^1.89.2",
     "semantic-release": "^24.2.7",
+    "sinon": "^20.0.0",
     "stylelint-config-idiomatic-order": "^10.0.0",
     "stylelint-config-standard-scss": "^15.0.1",
     "stylelint-config-standard": "^38.0.0",
