--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@rollup/rollup-linux-x64-gnu": "*"
   },
   "devDependencies": {
+    "@aurodesignsystem/auro-button": "^11.3.2",
     "@aurodesignsystem/design-tokens": "^8.4.0",
     "@aurodesignsystem/eslint-config": "^1.3.5",
     "@aurodesignsystem/auro-library": "^5.3.2",
