--- a/package.json
+++ b/package.json
@@ -59,9 +59,9 @@
   },
   "devDependencies": {
     "@aurodesignsystem/auro-button": "^11.3.2",
+    "@aurodesignsystem/auro-library": "npm:@aurodesignsystem-dev/auro-library@0.0.0-pr192.0",
     "@aurodesignsystem/design-tokens": "^8.4.0",
     "@aurodesignsystem/eslint-config": "^1.3.5",
-    "@aurodesignsystem/auro-library": "^5.3.2",
     "@aurodesignsystem/webcorestylesheets": "^10.0.3",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
