feat: add `appearance` deprecate `ondark` on input #1148

--- a/components/bibtemplate/package.json
+++ b/components/bibtemplate/package.json
@@ -10,7 +10,7 @@
   "private": true,
   "dependencies": {
     "@aurodesignsystem/auro-header": "^4.0.2",
-    "@aurodesignsystem/auro-icon": "^8.1.2",
+    "@aurodesignsystem-dev/auro-icon": "0.0.0-pr211.3",
     "chalk": "^5.4.1",
     "lit": "^3.2.1"
   },
