--- a/components/dropdown/package.json
+++ b/components/dropdown/package.json
@@ -13,7 +13,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@aurodesignsystem/auro-helptext": "*",
-    "@aurodesignsystem/auro-icon": "^8.1.2",
+    "@aurodesignsystem-dev/auro-icon": "0.0.0-pr211.3",
     "@floating-ui/dom": "^1.6.13",
     "@popperjs/core": "^2.11.8",
     "chalk": "^5.4.1",
