--- a/components/counter/package.json
+++ b/components/counter/package.json
@@ -15,7 +15,7 @@
     "@alaskaairux/icons": "^5.6.0",
     "@aurodesignsystem/auro-bibtemplate": "*",
     "@aurodesignsystem/auro-dropdown": "*",
-    "@aurodesignsystem-dev/auro-icon": "0.0.0-pr211.3",
+    "@aurodesignsystem/auro-icon": "^9.1.0",
     "chalk": "^5.4.1",
     "lit": "^3.2.1"
   },
