--- a/components/datepicker/package.json
+++ b/components/datepicker/package.json
@@ -16,7 +16,7 @@
     "@auro-formkit/form-validation": "*",
     "@aurodesignsystem/auro-bibtemplate": "*",
     "@aurodesignsystem/auro-dropdown": "*",
-    "@aurodesignsystem-dev/auro-icon": "0.0.0-pr211.3",
+    "@aurodesignsystem/auro-icon": "^9.1.0",
     "@aurodesignsystem/auro-input": "*",
     "@aurodesignsystem/auro-popover": "^5.1.0",
     "@material/mwc-icon-button": "^0.27.0",
