--- a/components/menu/package.json
+++ b/components/menu/package.json
@@ -12,7 +12,7 @@
     "url": "https://github.com/AlaskaAirlines/auro-menu"
   },
   "dependencies": {
-    "@aurodesignsystem-dev/auro-icon": "0.0.0-pr211.3",
+    "@aurodesignsystem/auro-icon": "^9.1.0",
     "lit": "^3.3.1"
   },
   "devDependencies": {
