ci: add `--ignore-scripts` flag to npx commands in action.yml and pull-request.yml
- rollup package's postinstall script expecting patch-package to be available

--- a/.github/actions/check-commits/action.yml
+++ b/.github/actions/check-commits/action.yml
@@ -26,7 +26,7 @@ runs:
         git --version
       shell: bash
     - name: Auro Check Commits
-      run: npx --package=@aurodesignsystem/auro-cli -- auro cc -l -d
+      run: npx  --ignore-scripts  --package=@aurodesignsystem/auro-cli -- auro cc -l -d
       shell: bash
       env:
           GITHUB_TOKEN: ${{ inputs.github-token }}
