--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "local-demo": "npm run build && sh ./local-demo.sh --zip"
   },
   "dependencies": {
+    "@lit/context": "^1.1.6",
     "@lit/reactive-element": "^2.1.1",
     "lit": "^3.3.1"
   },
